<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tally Counter</string>
    <string name="addToggle">Add</string>
    <string name="subtractToggle">Subtract</string>
    <string name="resetToggle">Reset</string>
    <string name="action_settings">Settings</string>
    <string name="action_lock_buttons">Disable Software Buttons</string>
    <string name="action_unlock_buttons">Enable Software Buttons</string>
    <string name="preference_count">Step</string>
    <string name="preference_count_description">Increase/decrease count when the button is
            tapped.</string>
    <string name="preference_volume_buttons">Volume Buttons</string>
    <string name="preference_volume_buttons_description">Ability to use the volume buttons
            to increase or decrease the count.</string>
    <string name="preference_screen_dim">Screen Always On</string>
    <string name="preference_screen_dim_description">Decide if the screen can dim or not.</string>
    <string name="save_error">Unable to save the file.</string>
    <string name="sw_buttons_disabled">Software buttons are now disabled.</string>
    <string name="sw_buttons_enabled">Software buttons are now enabled.</string>
    <string name="step_overflow">Step value is too big.\nNow set to 1.</string>
    <string name="step_over_limit">Step is over the consented maximum limit (that is ten
            millions).\nNow set to 1.</string>
</resources>
