<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="pref_step"
        android:title="@string/preference_count"
        android:summary="@string/preference_count_description"
        android:numeric="integer"
        android:defaultValue="1"
        android:persistent="true"
        android:selectAllOnFocus="true" />

    <CheckBoxPreference
        android:key="pref_volume_buttons"
        android:title="@string/preference_volume_buttons"
        android:summary="@string/preference_volume_buttons_description"
        android:defaultValue="false"
        android:persistent="true" />

    <CheckBoxPreference
        android:key="pref_screen_dim"
        android:title="@string/preference_screen_dim"
        android:summary="@string/preference_screen_dim_description"
        android:defaultValue="false"
        android:persistent="true"/>

</PreferenceScreen>
